Add Web Design Subpage

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <li id="web_design">
                   <a target="_blank" href="sub_webdesign.html">
                     <div>
-                      <img src="images/cardnews.png" alt="web design" />
+                      <img src="images/webdesign.png" alt="web design" />
                     </div>
                     <h2>Web Design</h2>
                   </a>
