--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -183,9 +183,9 @@
     </div>
   </div>
     
-  <!-- MOCKUP SECTION -->
+  <!-- CARDNEWS SECTION -->
   <section id="cardnews_1">
-    <h3>공모전 홍보 게시글 기획 &amp; 디자인</h3>
+    <!-- <h3>공모전 홍보 게시글 기획 &amp; 디자인</h3> -->
     <ul>
       <li>
         <img src="images/cardnews_1_01.png" class="cardnews_1_01" alt="카드뉴스1-공모전 공고" />
@@ -224,28 +224,171 @@
     </ul>
   </section>
 
-  <section id="mockup_2">
-    <div>
-        <h3>콘텐츠 퀴즈 이벤트 기획 &amp; 디자인</h3>
+  <section id="cardnews_2">
+    <div class="contentswrap">
+      <!-- <h3>콘텐츠 퀴즈 이벤트 기획 &amp; 디자인</h3> -->
+      <ul>
+        <li>
+          <img src="images/cardnews_2_01.png" alt="카드뉴스2-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_2_02.png" alt="카드뉴스2-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_2_03.png" alt="카드뉴스2-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_2_04.png" alt="카드뉴스2-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_2_05.png" alt="카드뉴스2-퀴즈 이벤트" />
+        </li>
+      </ul>
     </div>
-    <img src="images/mockup_cardnews_2.png" alt="카드뉴스 목업" />
   </section>
 
-  <section id="mockup_3">
-    <div>
-        <h3>마이데이터 카드뉴스 디자인</h3>
+  <section id="cardnews_3">
+    <div class="contentswrap">
+      <ul>
+        <li>
+          <img src="images/cardnews_3_01.jpg" alt="카드뉴스3-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_3_02.jpg" alt="카드뉴스3-퀴즈 이벤트" />
+        </li>
+        <li>
+          <img src="images/cardnews_3_03.jpg" alt="카드뉴스3-퀴즈 이벤트" />
+        </li>
+      </ul>
     </div>
-    <img src="images/mockup_cardnews_3.png" alt="카드뉴스 목업" />
+  </section>
+
+  <section id="cardnews_4">
+    <div class="contentswrap">
+      <ul>
+        <li>
+          <img src="images/cardnews_4_01.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_02.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_03.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_04.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_05.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_06.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_07.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_08.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_09.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_10.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_11.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_12.png" alt="카드뉴스4-금융서비스" />
+        </li>
+        <li>
+          <img src="images/cardnews_4_13.png" alt="카드뉴스4-금융서비스" />
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- WEB BANNER SECTION -->
+  <section id="main_webbanner">
+    <div class="contentswrap">
+      <img src="./images/webbanner_1_01.png" alt="Web Design" class="floating" />
+      <div class="title">
+        <h1 class="logo">WEB DESIGN</h1>
+        <h2>&#35;2 홈페이지 웹배너 제작</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          홈페이지 디자인과 제작을 하면서 만든 웹배너이다.
+          브랜드의 시그니처 메뉴와 제품이 돋보이도록 배너를 디자인했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>작업일시 &#58; 2021년 11월 &#126; 12월</li>
+        <li>참여율 &#58; 100	&#37;</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="webbanner_1">
+    <div class="contentswrap">
+      <h3>KRISPYKREME WEB BANNER</h3>
+      <ul>
+        <li>
+          <img src="images/webbanner_1_01.png" alt="웹배너1-크리스피크림" />
+        </li>
+        <li>
+          <img src="images/webbanner_1_02.png" alt="웹배너1-크리스피크림" />
+        </li>
+        <li>
+          <img src="images/webbanner_1_03.png" alt="웹배너1-크리스피크림" />
+        </li>
+        <li>
+          <img src="images/webbanner_1_04.png" alt="웹배너1-크리스피크림" />
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="webbanner_2">
+    <div class="contentswrap">
+      <h3>URIAGE WEB BANNER</h3>
+      <ul>
+        <li>
+          <img src="images/webbanner_2_01.png" alt="웹배너2-유리아쥬" />
+        </li>
+        <li>
+          <img src="images/webbanner_2_02.png" alt="웹배너2-유리아쥬" />
+        </li>
+        <li>
+          <img src="images/webbanner_2_03.png" alt="웹배너2-유리아쥬" />
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="webbanner_3">
+    <div class="contentswrap">
+      <h3>YUHAN WEB BANNER</h3>
+      <ul>
+        <li>
+          <img src="images/webbanner_3_01.png" alt="웹배너2-유한양행" />
+        </li>
+        <li>
+          <img src="images/webbanner_3_02.png" alt="웹배너2-유한양행" />
+        </li>
+        <li>
+          <img src="images/webbanner_3_03.png" alt="웹배너2-유한양행" />
+        </li>
+      </ul>
+    </div>
   </section>
     
   <!-- FOOTER -->
   <div class="footer">
     <div id="btntop">
-      <a href="#"></a>
+      <a id="goTop"></a>
     </div>
-    <p class="copyright">
-      Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM
-    </p>
+    <p class="copyright">Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM</p>
   </div>
   
 </body>
