Add SubPage img

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
-            <li><a target="_blank" href="sub_webdesign.html">WEB DESIGN</a></li>
-            <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-            <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
-            <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
+            <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
+            <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+            <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
+            <li><a href="sub_designproject">DESIGN PROJECT</a></li>
           </ul>
         </li>
         <li>
