--- a/sub_donga.html
+++ b/sub_donga.html
@@ -75,11 +75,6 @@
           <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="location.href='index.html'">ABOUT ME</button>
-        </h3>
-      </li> -->
       <li>
         <h3>
           DESIGN WORKS
@@ -87,16 +82,11 @@
         </h3>
         <ul class="sub_nav">
           <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
-          <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-          <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
-          <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
+          <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+          <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
+          <li><a href="sub_designproject">DESIGN PROJECT</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="contact()">CONTACT</button>
-        </h3>
-      </li> -->
     </ul>
     <!-- 닫기영역 -->
     <label class="btn_close" for="toggle"></label>
