--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -85,9 +85,9 @@
         </h3>
         <ul class="sub_nav">
           <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
-          <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-          <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
-          <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
+          <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+          <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
+          <li><a href="sub_designproject">DESIGN PROJECT</a></li>
         </ul>
       </li>
     </ul>
