--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
           </h3>
           <ul class="sub_nav">
             <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
-            <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+            <li><a href="sub_graphicdesign.html">GRAPHIC DESIGN</a></li>
             <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
-            <li><a href="sub_designproject">DESIGN PROJECT</a></li>
+            <li><a href="sub_designproject.html">DESIGN PROJECT</a></li>
           </ul>
         </li>
         <li>
@@ -323,7 +323,7 @@
                   </a>
                 </li>
                 <li id="graphic_design">
-                  <a target="_blank" href="#">
+                  <a target="_blank" href="sub_graphicdesign.html">
                     <div>
                       <img src="images/graphic.png" alt="graphic design" />
                     </div>
@@ -339,9 +339,9 @@
                   </a>
                 </li>
                 <li id="project">
-                  <a target="_blank" href="sub_balimoon.html">
+                  <a target="_blank" href="sub_designproject.html">
                     <div>
-                      <img src="images/balimoon.png" alt="project" />
+                      <img src="images/project.png" alt="project" />
                     </div>
                     <h2>Design Project</h2>
                   </a>
