--- a/sub_designproject.html
+++ b/sub_designproject.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <meta name="format-detection" content="telephone=no" />
-  <title>Digital Drawing</title>
+  <title>Design Project</title>
 
   <!-- 오픈 그래프(The Open Graph protocol) -->
   <meta property="og:type" content="website" />
@@ -43,7 +43,7 @@
   <script src="js/jquery-3.5.0.min.js"></script>
 </head>
 
-<body class="digital_body">
+<body class="project_body">
   <!-- HOME BUTTON -->
   <header>
     <h1 class="myname">
@@ -164,13 +164,13 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/main_digital.png" alt="Digital Drawing" class="floating" />
+      <img src="./images/main_project.png" alt="Design Project" class="floating" />
       <div class="title">
-        <h1 class="logo">DIGITAL DRAWING</h1>
-        <h2>&#35;1 일러스트 작업</h2>
+        <h1 class="logo">DESIGN PROJECT</h1>
+        <h2>팜팜발리 와인바 메뉴판 작업</h2>
         <h3>OVERVIEW</h3>
         <p>
-          남미여행 때 느꼈던 여행지의 느낌을 그래픽으로 구상한 후 페루 마추픽추, 비니쿤카, 와카치나 사막을 일러스트레이션으로 표현한 작업이다.
+          마포구 연남동에 위치한 발리식 와인바 '팜팜발리'의 메뉴판 제작 프로젝트. 2021년 6월에 진행되었다. 시그니처 메뉴 5가지를 프로크리에이트를 통해 아트워크 작업을 진행하고, 일러스트로 메뉴판 편집 작업을 진행했다.
         </p>
       </div>
       <ul class="period">
@@ -179,130 +179,25 @@
     </div>
   </div>
     
-  <!-- Illust SECTION -->
-  <section id="illust_1">
+  <!-- PALMPALM SECTION -->
+  <section id="project_1">
     <ul>
       <li>
-        <img src="images/main_digital.png" class="digital_1_01" alt="디지털드로잉1-일러스트" />
+        <img src="images/project_1_01.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_1_02.png" alt="디자인프로젝트-팜팜발리" />
       </li>
       <li>
-        <img src="images/digital_1_02.png" class="digital_1_02" alt="디지털드로잉1-일러스트" />
+        <img src="images/project_2_01.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_2_02.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_2_03.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_2_04.png" alt="디자인프로젝트-팜팜발리" />
+      </li>
+      <li>
+        <img src="images/project_3_01.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_3_02.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/project_3_03.png" alt="디자인프로젝트-팜팜발리" />
       </li>
     </ul>
-  </section>
-
-  <section id="illust_2">
-    <ul>
-      <li>
-        <img src="images/digital_2_01.png" alt="디지털드로잉2-일러스트" />
-      </li>
-      <li>
-        <img src="images/digital_2_02.png" alt="디지털드로잉2-일러스트" />
-      </li>
-      <li>
-        <img src="images/digital_2_03.png" alt="디지털드로잉2-일러스트" />
-      </li>
-    </ul>
-  </section>
-
-  <section id="illust_3">
-    <ul>
-      <li>
-        <img src="images/digital_3_01.png" alt="디지털드로잉3-일러스트" />
-      </li>
-      <li>
-        <img src="images/digital_3_02.png" alt="디지털드로잉3-일러스트" />
-      </li>
-      <li>
-        <img src="images/digital_3_03.png" alt="디지털드로잉3-일러스트" />
-      </li>
-    </ul>
-  </section>
-
-  <!-- CHARACTER SECTION -->
-  <section id="main_character">
-    <div class="contentswrap">
-      <img src="./images/character_1_01.png" alt="Digital Drawing" class="floating" />
-      <div class="title">
-        <h1 class="logo">DIGITAL DRAWING</h1>
-        <h2>&#35;2 캐릭터 디자인</h2>
-        <h3>OVERVIEW</h3>
-        <p>
-          폰케이스, 에어팟 케이스 디자인으로 활용할 수 있는 브랜딩 캐릭터를 만든다는 목표로 캐릭터 스토리와 디자인을 기획했다. '뭉치'라는 캐릭터를 만들고 일러스트레이션으로 제작한 작업이다.
-        </p>
-      </div>
-      <ul class="period">
-        <li>참여율 &#58; 100	&#37;</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="character_1">
-    <div class="contentswrap">
-      <ul>
-        <li>
-          <img src="images/character_1_02.png" alt="디지털드로잉4-캐릭터디자인" />
-        </li>
-        <li>
-          <img src="images/character_1_03.png" alt="디지털드로잉4-캐릭터디자인" />
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="character_2">
-    <div class="contentswrap">
-      <ul>
-        <li>
-          <img src="images/character_1_04.png" class="floating" alt="디지털드로잉4-캐릭터디자인" />
-        </li>
-        <li>
-          <img src="images/character_1_05.png" style="width: 85%;" alt="디지털드로잉4-캐릭터디자인" />
-        </li>
-        <li>
-          <img src="images/character_1_06.png" class="floating" alt="디지털드로잉4-캐릭터디자인" />
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- DRAWING SECTION -->
-  <section id="main_drawing">
-    <div class="contentswrap">
-      <img src="./images/drawing_2_01.png" alt="Digital Drawing" class="floating" />
-      <div class="title">
-        <h1 class="logo">DIGITAL DRAWING</h1>
-        <h2>&#35;3 디지털 드로잉</h2>
-        <h3>OVERVIEW</h3>
-        <p>
-          태블릿 PC로 직접 그린 디지털 드로잉 작업물이다. 친구들의 반려견을 보고 프로크리에이트로 작업했다.
-        </p>
-      </div>
-      <ul class="period">
-        <li>참여율 &#58; 100	&#37;</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="drawing">
-    <div class="contentswrap">
-      <ul>
-        <li>
-          <img src="images/drawing_1_01.png" alt="디지털드로잉5-태블릿드로잉" />
-          <img src="images/drawing_1_02.png" alt="디지털드로잉5-태블릿드로잉" />
-
-        </li>
-        <li>
-          <img src="images/drawing_2_01.png" alt="디지털드로잉6-태블릿드로잉" />
-          <img src="images/drawing_2_02.png" alt="디지털드로잉6-태블릿드로잉" />
-
-        </li>
-        <li>
-          <img src="images/drawing_3_01.png" alt="디지털드로잉7-태블릿드로잉" />
-          <img src="images/drawing_3_02.png" alt="디지털드로잉7-태블릿드로잉" />
-        </li>
-      </ul>
-    </div>
   </section>
     
   <!-- FOOTER -->
