--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -85,9 +85,9 @@
         </h3>
         <ul class="sub_nav">
           <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
-          <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+          <li><a href="sub_graphicdesign.html">GRAPHIC DESIGN</a></li>
           <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
-          <li><a href="sub_designproject">DESIGN PROJECT</a></li>
+          <li><a href="sub_designproject.html">DESIGN PROJECT</a></li>
         </ul>
       </li>
     </ul>
@@ -149,7 +149,7 @@
         </a>
       </li>
       <li class="project">
-        <a href="sub_project.html">
+        <a href="sub_designproject.html">
           <div class="front">
             <img src="images/project_logo.png" alt="디자인 프로젝트 로고" />
           </div>
