--- a/sub_overwatch.html
+++ b/sub_overwatch.html
@@ -82,9 +82,9 @@
         </h3>
         <ul class="sub_nav">
           <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
-          <li><a href="sub_graphicdesign">GRAPHIC DESIGN</a></li>
+          <li><a href="sub_graphicdesign.html">GRAPHIC DESIGN</a></li>
           <li><a href="sub_digitaldrawing.html">DIGITAL DRAWING</a></li>
-          <li><a href="sub_designproject">DESIGN PROJECT</a></li>
+          <li><a href="sub_designproject.html">DESIGN PROJECT</a></li>
         </ul>
       </li>
     </ul>
