--- a/sub_digitaldrawing.html
+++ b/sub_digitaldrawing.html
@@ -129,7 +129,7 @@
         </a>
       </li>
       <li class="graphic">
-        <a href="sub_graphic.html">
+        <a href="sub_graphicdesign.html">
           <div class="front">
             <img src="images/graphic_logo.png" alt="그래픽 디자인 로고" />
           </div>
