--- a/sub_graphicdesign.html
+++ b/sub_graphicdesign.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <meta name="format-detection" content="telephone=no" />
-  <title>Design Project</title>
+  <title>Graphic Design</title>
 
   <!-- 오픈 그래프(The Open Graph protocol) -->
   <meta property="og:type" content="website" />
@@ -43,7 +43,7 @@
   <script src="js/jquery-3.5.0.min.js"></script>
 </head>
 
-<body class="project_body">
+<body class="graphic_body">
   <!-- HOME BUTTON -->
   <header>
     <h1 class="myname">
@@ -164,46 +164,74 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/main_project.png" alt="Design Project" class="floating" />
+      <img src="./images/graphic_1_01.png" alt="Graphic Design" class="floating" />
       <div class="title">
-        <h1 class="logo">DESIGN PROJECT</h1>
-        <h2>팜팜발리 와인바 메뉴판 작업</h2>
+        <h1 class="logo">GRAPHIC DESIGN</h1>
+        <h2>&#35;1 한국인터넷진흥원 교재 제작</h2>
         <h3>OVERVIEW</h3>
         <p>
-          마포구 연남동에 위치한 발리식 와인바 '팜팜발리'의 메뉴판 제작 프로젝트. 2021년 6월에 진행되었다. 시그니처 메뉴 5가지를 프로크리에이트를 통해 아트워크 작업을 진행하고, 일러스트로 메뉴판 편집 작업을 진행했다.
+          한국아이티평가원에서 근무할 때 작업한 디자인 작업물이다. 한국인터넷진흥원에서 제작하는 암호모듈검증 교재의 표지, 목차, 간지 디자인을 제작했다. 클라이언트가 원하는 디자인 레퍼런스를 참고해 한눈에 들어오도록 크게 작업했고 교재의 내용을 대표하는 이미지를 제작해 표지에 넣었다.
         </p>
       </div>
       <ul class="period">
+        <li>작업일시 &#58; 2020년 10월</li>
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </div>
     
-  <!-- PALMPALM SECTION -->
-  <section id="project_1">
-    <img src="images/leaf_l.png" alt="leaf_left" class="leaf_left floating" />
-    <img src="images/leaf_r.png" alt="leaf_right" class="leaf_right floating" />
+  <!-- BOOK COVER SECTION -->
+  <section id="graphic_1">
     <ul>
       <li>
-        <img src="images/project_1_01.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_1_02.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/graphic_1_02.png" class="graphic_1_02" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_03.png" class="graphic_1_03" alt="그래픽디자인1-암호모듈검증 교재" />
       </li>
       <li>
-        <img src="images/project_2_01.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_2_02.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_2_03.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_2_04.png" alt="디자인프로젝트-팜팜발리" />
-      </li>
-      <li>
-        <img src="images/project_3_01.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_3_02.png" alt="디자인프로젝트-팜팜발리" />
-        <img src="images/project_3_03.png" alt="디자인프로젝트-팜팜발리" />
+        <img src="images/graphic_1_04.png" class="graphic_1_04" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_05.png" class="graphic_1_05" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_06.png" class="graphic_1_06" alt="그래픽디자인1-암호모듈검증 교재" />
       </li>
     </ul>
   </section>
+
+  <!-- POSTER SECTION -->
+  <section id="main_poster">
+    <div class="contentswrap">
+      <img src="./images/poster_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <div class="title">
+        <h1 class="logo">GRAPHIC DESIGN</h1>
+        <h2>&#35;2 포스터 디자인</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          한국아이티평가원에서 근무할 때 작업한 포스터 디자인 작업물이다. 한국인터넷진흥원에서 진행하는 교육 홍보 포스터와, 한국아이티평가원에서 서비스 수요기업을 모집하는 공고 포스터를 제작했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>작업일시 &#58; 2020년 10월</li>
+        <li>참여율 &#58; 100	&#37;</li>
+      </ul>
+    </div>
+  </section>
+
+    <!-- POSTER SECTION -->
+    <section id="graphic_2">
+      <ul>
+        <li>
+          <img src="images/poster_1_02.png" alt="그래픽디자인2-포스터" />
+          <img src="images/poster_1_03.png" alt="그래픽디자인2-포스터" />
+        </li>
+      </ul>
+    </section>
+
+
+
+
+
+
     
   <!-- FOOTER -->
-  <div class="footer">
+  <div class="graphic_footer">
     <div id="btntop">
       <a id="goTop"></a>
     </div>
