--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -129,7 +129,7 @@
         </a>
       </li>
       <li class="graphic">
-        <a href="sub_graphic.html">
+        <a href="sub_graphicdesign.html">
           <div class="front">
             <img src="images/graphic_logo.png" alt="그래픽 디자인 로고" />
           </div>
@@ -379,6 +379,24 @@
         <li>
           <img src="images/webbanner_3_03.png" alt="웹배너2-유한양행" />
         </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- WEBPAGE SECTION -->
+  <section id="main_webpage">
+    <div class="contentswrap">
+      <img src="./images/webpage_1_01.png" alt="Web Page" class="floating" />
+      <div class="title">
+        <h1 class="logo">WEB DESIGN</h1>
+        <h2>&#35;3 홈페이지 디자인</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          크리스피크림, 유리아쥬, 유한양행 홈페이지 리뉴얼 디자인을 진행한 작업물이다. 개인작업으로 리뉴얼 디자인 후 사이트로 제작했다. 또한 한국아이티평가원에서 근무할 때 진행했던 SCS서비스 DashBoard 페이지 리뉴얼 디자인 작업물이다. Light Mode와 Dark Mode 두가지 버전으로 디자인했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </section>
