--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -195,6 +195,7 @@
       </li>
     </ul>
   </section>
+  
   <section id="cardnews_1_detail">
     <ul>
       <li>
@@ -392,11 +393,36 @@
         <h2>&#35;3 홈페이지 디자인</h2>
         <h3>OVERVIEW</h3>
         <p>
-          크리스피크림, 유리아쥬, 유한양행 홈페이지 리뉴얼 디자인을 진행한 작업물이다. 개인작업으로 리뉴얼 디자인 후 사이트로 제작했다. 또한 한국아이티평가원에서 근무할 때 진행했던 SCS서비스 DashBoard 페이지 리뉴얼 디자인 작업물이다. Light Mode와 Dark Mode 두가지 버전으로 디자인했다.
+          크리스피크림, 유리아쥬, 유한양행 홈페이지 리뉴얼 디자인을 진행한 작업물이다. 개인작업으로 리뉴얼 디자인 후 사이트로 제작했다. 또한 한국아이티평가원에서 근무할 때 개발한 서비스의 DashBoard 페이지를 리뉴얼 디자인 했다. Light Mode와 Dark Mode 두가지 버전으로 디자인했다.
         </p>
       </div>
       <ul class="period">
+        <li>작업일시 &#58; 2021년 11월 &#126; 12월</li>
         <li>참여율 &#58; 100	&#37;</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="webdesign">
+    <div class="contentswrap">
+      <ul>
+        <h3>KRISPYKREME WEB DESIGN</h3>
+        <li>
+          <img src="images/webpage_1_02.png" alt="웹디자인1-크리스피크림" />
+        </li>
+        <h3>URIAGE WEB DESIGN</h3>
+        <li>
+          <img src="images/webpage_1_03.png" alt="웹디자인1-유리아쥬" />
+        </li>
+        <h3>YUHAN WEB DESIGN</h3>
+        <li>
+          <img src="images/webpage_1_04.png" alt="웹디자인1-유한양행" />
+        </li>
+        <h3>SCS DASHBOARD WEB DESIGN</h3>
+        <li>
+          <img src="images/webpage_1_05.png" alt="웹디자인1-SCS" />
+          <img src="images/webpage_1_06.png" alt="웹디자인1-SCS" />
+        </li>
       </ul>
     </div>
   </section>
