--- a/sub_graphicdesign.html
+++ b/sub_graphicdesign.html
@@ -214,17 +214,58 @@
     </div>
   </section>
 
-    <!-- POSTER SECTION -->
-    <section id="graphic_2">
-      <ul>
-        <li>
-          <img src="images/poster_1_02.png" alt="그래픽디자인2-포스터" />
-          <img src="images/poster_1_03.png" alt="그래픽디자인2-포스터" />
-        </li>
+  <!-- POSTER SECTION -->
+  <section id="graphic_2">
+    <ul>
+      <li>
+        <img src="images/poster_1_02.png" alt="그래픽디자인2-포스터" />
+        <img src="images/poster_1_03.png" alt="그래픽디자인2-포스터" />
+      </li>
+    </ul>
+  </section>
+
+  <!-- BROCHURE SECTION -->
+  <section id="main_brochure">
+    <div class="contentswrap">
+      <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <div class="title">
+        <h1 class="logo">GRAPHIC DESIGN</h1>
+        <h2>&#35;3 브로슈어 디자인</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          한국아이티평가원에서 근무할 때 작업한 브로슈어 디자인 작업물이다. VIDaaS, SCS 서비스의 내용을 설명하는 브로슈어 표지 및 내지 디자인을 진행했다. 디자인툴은 일러스트를 사용했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>작업일시 &#58; 2021년 11월</li>
+        <li>참여율 &#58; 100	&#37;</li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-
+  <!-- BROCHURE SECTION -->
+  <section id="graphic_3">
+    <ul>
+      <h3>VIDaaS 브로슈어</h3>
+      <li>
+        <img src="images/brochure_1_01.png" alt="그래픽디자인3-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_1_02.png" alt="그래픽디자인3-브로슈어" />
+        <img src="images/brochure_1_03.png" alt="그래픽디자인3-브로슈어" />
+        <img src="images/brochure_1_04.png" alt="그래픽디자인3-브로슈어" />
+        <img src="images/brochure_1_05.png" alt="그래픽디자인3-브로슈어" />
+      </li>
+      <h3>SCS 브로슈어</h3>
+      <li>
+        <img src="images/brochure_2_01.png" alt="그래픽디자인3-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_2_02.png" alt="그래픽디자인3-브로슈어" />
+        <img src="images/brochure_2_03.png" alt="그래픽디자인3-브로슈어" />
+      </li>
+    </ul>
+  </section>
 
 
 
