--- a/sub_graphicdesign.html
+++ b/sub_graphicdesign.html
@@ -170,7 +170,7 @@
         <h2>&#35;1 한국인터넷진흥원 교재 제작</h2>
         <h3>OVERVIEW</h3>
         <p>
-          한국아이티평가원에서 근무할 때 작업한 디자인 작업물이다. 한국인터넷진흥원에서 제작하는 암호모듈검증 교재의 표지, 목차, 간지 디자인을 제작했다. 클라이언트가 원하는 디자인 레퍼런스를 참고해 한눈에 들어오도록 크게 작업했고 교재의 내용을 대표하는 이미지를 제작해 표지에 넣었다.
+          한국아이티평가원에서 근무할 때 작업한 디자인 작업물이다. 한국인터넷진흥원에서 제작하는 암호모듈검증 교재의 표지, 목차, 간지 디자인을 작업했다. 클라이언트가 원하는 디자인 레퍼런스를 참고해 한눈에 들어오도록 크게 작업했고 교재의 내용을 대표하는 이미지를 제작해 표지에 넣었다.
         </p>
       </div>
       <ul class="period">
@@ -195,8 +195,79 @@
     </ul>
   </section>
 
+  <!-- BROCHURE SECTION -->
+  <section id="main_brochure">
+    <div class="contentswrap">
+      <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <div class="title">
+        <h1 class="logo">GRAPHIC DESIGN</h1>
+        <h2>&#35;2 브로슈어 디자인</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          한국아이티평가원에서 근무할 때 작업한 브로슈어 디자인 작업물이다. 서비스의 내용을 설명하는 브로슈어 표지 및 내지 디자인을 진행했다. 디자인툴은 일러스트를 사용했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>작업일시 &#58; 2021년 11월</li>
+        <li>참여율 &#58; 100	&#37;</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- BROCHURE SECTION -->
+  <section id="graphic_2">
+    <ul>
+      <li>
+        <img src="images/brochure_1_02.png" alt="그래픽디자인2-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_1_01.png" alt="그래픽디자인2-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_1_03.png" alt="그래픽디자인2-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_2_01.png" alt="그래픽디자인2-브로슈어" />
+      </li>
+      <li>
+        <img src="images/brochure_2_02.png" alt="그래픽디자인2-브로슈어" />
+      </li>
+    </ul>
+  </section>
+
+  <!-- BOOK SECTION -->
+  <section id="main_book">
+    <div class="contentswrap">
+      <img src="./images/book_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <div class="title">
+        <h1 class="logo">GRAPHIC DESIGN</h1>
+        <h2>&#35;3 해설서 표지 및 간지 디자인</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          한국아이티평가원에서 근무할 때 작업한 해설서 디자인 작업물이다. 한국인터넷진흥원에서 발행하는 정보보호인증기준 상세해설서의 표지, 간지의 디자인을 작업했다.
+        </p>
+      </div>
+      <ul class="period">
+        <li>작업일시 &#58; 2021년 9월</li>
+        <li>참여율 &#58; 100	&#37;</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- BOOK SECTION -->
+  <section id="graphic_3">
+    <ul>
+      <li>
+        <img src="images/book_1_01.png" alt="그래픽디자인3-해설서" />
+      </li>
+      <li>
+        <img src="images/book_1_02.png" alt="그래픽디자인3-해설서" />
+      </li>
+    </ul>
+  </section>
+
   <!-- POSTER SECTION -->
-  <section id="main_poster">
+  <!-- <section id="main_poster">
     <div class="contentswrap">
       <img src="./images/poster_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
       <div class="title">
@@ -212,60 +283,17 @@
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
-  </section>
+  </section> -->
 
   <!-- POSTER SECTION -->
-  <section id="graphic_2">
+  <!-- <section id="graphic_3">
     <ul>
       <li>
         <img src="images/poster_1_02.png" alt="그래픽디자인2-포스터" />
         <img src="images/poster_1_03.png" alt="그래픽디자인2-포스터" />
       </li>
     </ul>
-  </section>
-
-  <!-- BROCHURE SECTION -->
-  <section id="main_brochure">
-    <div class="contentswrap">
-      <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
-      <div class="title">
-        <h1 class="logo">GRAPHIC DESIGN</h1>
-        <h2>&#35;3 브로슈어 디자인</h2>
-        <h3>OVERVIEW</h3>
-        <p>
-          한국아이티평가원에서 근무할 때 작업한 브로슈어 디자인 작업물이다. VIDaaS, SCS 서비스의 내용을 설명하는 브로슈어 표지 및 내지 디자인을 진행했다. 디자인툴은 일러스트를 사용했다.
-        </p>
-      </div>
-      <ul class="period">
-        <li>작업일시 &#58; 2021년 11월</li>
-        <li>참여율 &#58; 100	&#37;</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- BROCHURE SECTION -->
-  <section id="graphic_3">
-    <ul>
-      <h3>VIDaaS 브로슈어</h3>
-      <li>
-        <img src="images/brochure_1_01.png" alt="그래픽디자인3-브로슈어" />
-      </li>
-      <li>
-        <img src="images/brochure_1_02.png" alt="그래픽디자인3-브로슈어" />
-        <img src="images/brochure_1_03.png" alt="그래픽디자인3-브로슈어" />
-        <img src="images/brochure_1_04.png" alt="그래픽디자인3-브로슈어" />
-        <img src="images/brochure_1_05.png" alt="그래픽디자인3-브로슈어" />
-      </li>
-      <h3>SCS 브로슈어</h3>
-      <li>
-        <img src="images/brochure_2_01.png" alt="그래픽디자인3-브로슈어" />
-      </li>
-      <li>
-        <img src="images/brochure_2_02.png" alt="그래픽디자인3-브로슈어" />
-        <img src="images/brochure_2_03.png" alt="그래픽디자인3-브로슈어" />
-      </li>
-    </ul>
-  </section>
+  </section> -->
 
 
 
