--- a/sub_digitaldrawing.html
+++ b/sub_digitaldrawing.html
@@ -180,50 +180,50 @@
   </div>
     
   <!-- Illust SECTION -->
-  <section id="illust_1">
+  <section id="illust_1" class="scroll-spy">
     <ul>
-      <li>
+      <li class="back-to-position to-bottom delay-0">
         <img src="images/main_digital.png" class="digital_1_01" alt="디지털드로잉1-일러스트" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-2">
         <img src="images/digital_1_02.png" class="digital_1_02" alt="디지털드로잉1-일러스트" />
       </li>
     </ul>
   </section>
 
-  <section id="illust_2">
+  <section id="illust_2" class="scroll-spy">
     <ul>
-      <li>
+      <li class="back-to-position to-bottom delay-0">
         <img src="images/digital_2_01.png" alt="디지털드로잉2-일러스트" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-2">
         <img src="images/digital_2_02.png" alt="디지털드로잉2-일러스트" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-4">
         <img src="images/digital_2_03.png" alt="디지털드로잉2-일러스트" />
       </li>
     </ul>
   </section>
 
-  <section id="illust_3">
+  <section id="illust_3" class="scroll-spy">
     <ul>
-      <li>
+      <li class="back-to-position to-bottom delay-0">
         <img src="images/digital_3_01.png" alt="디지털드로잉3-일러스트" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-2">
         <img src="images/digital_3_02.png" alt="디지털드로잉3-일러스트" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-4">
         <img src="images/digital_3_03.png" alt="디지털드로잉3-일러스트" />
       </li>
     </ul>
   </section>
 
   <!-- CHARACTER SECTION -->
-  <section id="main_character">
+  <section id="main_character" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/character_1_01.png" alt="Digital Drawing" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">DIGITAL DRAWING</h1>
         <h2>&#35;2 캐릭터 디자인</h2>
         <h3>OVERVIEW</h3>
@@ -231,26 +231,26 @@
           폰케이스, 에어팟 케이스 디자인으로 활용할 수 있는 브랜딩 캐릭터를 만든다는 목표로 캐릭터 스토리와 디자인을 기획했다. '뭉치'라는 캐릭터를 만들고 일러스트레이션으로 제작한 작업이다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </section>
 
-  <section id="character_1">
+  <section id="character_1" class="scroll-spy">
     <div class="contentswrap">
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-0">
           <img src="images/character_1_02.png" alt="디지털드로잉4-캐릭터디자인" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/character_1_03.png" alt="디지털드로잉4-캐릭터디자인" />
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="character_2">
+  <section id="character_2" class="scroll-spy">
     <div class="contentswrap">
       <ul>
         <li>
@@ -267,10 +267,10 @@
   </section>
 
   <!-- DRAWING SECTION -->
-  <section id="main_drawing">
+  <section id="main_drawing" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/drawing_2_01.png" alt="Digital Drawing" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">DIGITAL DRAWING</h1>
         <h2>&#35;3 디지털 드로잉</h2>
         <h3>OVERVIEW</h3>
@@ -278,26 +278,26 @@
           태블릿 PC로 직접 그린 디지털 드로잉 작업물이다. 친구들의 반려견을 보고 프로크리에이트로 작업했다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </section>
 
-  <section id="drawing">
+  <section id="drawing" class="scroll-spy">
     <div class="contentswrap">
       <ul>
         <li>
-          <img src="images/drawing_1_01.png" alt="디지털드로잉5-태블릿드로잉" />
-          <img src="images/drawing_1_02.png" alt="디지털드로잉5-태블릿드로잉" />
+          <img src="images/drawing_1_01.png" class="back-to-position to-right delay-0" alt="디지털드로잉5-태블릿드로잉" />
+          <img src="images/drawing_1_02.png" class="back-to-position to-left delay-0" alt="디지털드로잉5-태블릿드로잉" />
         </li>
         <li>
-          <img src="images/drawing_2_01.png" alt="디지털드로잉6-태블릿드로잉" />
-          <img src="images/drawing_2_02.png" alt="디지털드로잉6-태블릿드로잉" />
+          <img src="images/drawing_2_01.png" class="back-to-position to-right delay-4" alt="디지털드로잉6-태블릿드로잉" />
+          <img src="images/drawing_2_02.png" class="back-to-position to-left delay-4" alt="디지털드로잉6-태블릿드로잉" />
         </li>
         <li>
-          <img src="images/drawing_3_01.png" alt="디지털드로잉7-태블릿드로잉" />
-          <img src="images/drawing_3_02.png" alt="디지털드로잉7-태블릿드로잉" />
+          <img src="images/drawing_3_01.png" class="back-to-position to-right delay-8" alt="디지털드로잉7-태블릿드로잉" />
+          <img src="images/drawing_3_02.png" class="back-to-position to-left delay-8" alt="디지털드로잉7-태블릿드로잉" />
         </li>
       </ul>
     </div>
