--- a/sub_graphicdesign.html
+++ b/sub_graphicdesign.html
@@ -181,25 +181,25 @@
   </div>
     
   <!-- BOOK COVER SECTION -->
-  <section id="graphic_1">
+  <section id="graphic_1" class="scroll-spy">
     <ul>
       <li>
-        <img src="images/graphic_1_02.png" class="graphic_1_02" alt="그래픽디자인1-암호모듈검증 교재" />
-        <img src="images/graphic_1_03.png" class="graphic_1_03" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_02.png" class="graphic_1_02 back-to-position to-right delay-1" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_03.png" class="graphic_1_03 back-to-position to-left delay-2" alt="그래픽디자인1-암호모듈검증 교재" />
       </li>
       <li>
-        <img src="images/graphic_1_04.png" class="graphic_1_04" alt="그래픽디자인1-암호모듈검증 교재" />
-        <img src="images/graphic_1_05.png" class="graphic_1_05" alt="그래픽디자인1-암호모듈검증 교재" />
-        <img src="images/graphic_1_06.png" class="graphic_1_06" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_04.png" class="graphic_1_04 back-to-position to-bottom delay-2" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_05.png" class="graphic_1_05 back-to-position to-bottom delay-4" alt="그래픽디자인1-암호모듈검증 교재" />
+        <img src="images/graphic_1_06.png" class="graphic_1_06 back-to-position to-bottom delay-6" alt="그래픽디자인1-암호모듈검증 교재" />
       </li>
     </ul>
   </section>
 
   <!-- BROCHURE SECTION -->
-  <section id="main_brochure">
+  <section id="main_brochure" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">GRAPHIC DESIGN</h1>
         <h2>&#35;2 브로슈어 디자인</h2>
         <h3>OVERVIEW</h3>
@@ -207,7 +207,7 @@
           한국아이티평가원에서 근무할 때 작업한 브로슈어 디자인 작업물이다. 서비스의 내용을 설명하는 브로슈어 표지 및 내지 디자인을 진행했다. 디자인툴은 일러스트를 사용했다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>작업일시 &#58; 2021년 11월</li>
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
@@ -215,39 +215,39 @@
   </section>
 
   <!-- BROCHURE SECTION -->
-  <section id="graphic_2">
+  <section id="graphic_2" class="scroll-spy">
     <ul>
-      <li>
+      <li class="back-to-position to-right delay-0">
         <img src="images/brochure_1_02.png" alt="그래픽디자인2-브로슈어" />
       </li>
-      <li>
+      <li class="back-to-position to-right delay-3">
         <img src="images/brochure_1_01.png" alt="그래픽디자인2-브로슈어" />
       </li>
-      <li>
+      <li class="back-to-position to-right delay-6">
         <img src="images/brochure_1_03.png" alt="그래픽디자인2-브로슈어" />
       </li>
-      <li>
+      <li class="back-to-position to-right delay-9">
         <img src="images/brochure_2_01.png" alt="그래픽디자인2-브로슈어" />
       </li>
-      <li>
+      <li class="back-to-position to-right delay-12">
         <img src="images/brochure_2_02.png" alt="그래픽디자인2-브로슈어" />
       </li>
     </ul>
   </section>
 
   <!-- BOOK SECTION -->
-  <section id="main_book">
+  <section id="main_book" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/book_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">GRAPHIC DESIGN</h1>
-        <h2>&#35;3 해설서 표지 및 간지 디자인</h2>
+        <h2>&#35;3 해설서 표지 디자인</h2>
         <h3>OVERVIEW</h3>
         <p>
           한국아이티평가원에서 근무할 때 작업한 해설서 디자인 작업물이다. 한국인터넷진흥원에서 발행하는 정보보호인증기준 상세해설서의 표지, 간지의 디자인을 작업했다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>작업일시 &#58; 2021년 9월</li>
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
@@ -255,50 +255,17 @@
   </section>
 
   <!-- BOOK SECTION -->
-  <section id="graphic_3">
+  <section id="graphic_3" class="scroll-spy">
     <ul>
-      <li>
-        <img src="images/book_1_01.png" alt="그래픽디자인3-해설서" />
-      </li>
-      <li>
+      <li class="back-to-position to-right delay-0">
         <img src="images/book_1_02.png" alt="그래픽디자인3-해설서" />
+      </li>
+      <li class="back-to-position to-right delay-4">
+        <img src="images/book_1_01.png" alt="그래픽디자인3-해설서" />
       </li>
     </ul>
   </section>
-
-  <!-- POSTER SECTION -->
-  <!-- <section id="main_poster">
-    <div class="contentswrap">
-      <img src="./images/poster_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
-      <div class="title">
-        <h1 class="logo">GRAPHIC DESIGN</h1>
-        <h2>&#35;2 포스터 디자인</h2>
-        <h3>OVERVIEW</h3>
-        <p>
-          한국아이티평가원에서 근무할 때 작업한 포스터 디자인 작업물이다. 한국인터넷진흥원에서 진행하는 교육 홍보 포스터와, 한국아이티평가원에서 서비스 수요기업을 모집하는 공고 포스터를 제작했다.
-        </p>
-      </div>
-      <ul class="period">
-        <li>작업일시 &#58; 2020년 10월</li>
-        <li>참여율 &#58; 100	&#37;</li>
-      </ul>
-    </div>
-  </section> -->
-
-  <!-- POSTER SECTION -->
-  <!-- <section id="graphic_3">
-    <ul>
-      <li>
-        <img src="images/poster_1_02.png" alt="그래픽디자인2-포스터" />
-        <img src="images/poster_1_03.png" alt="그래픽디자인2-포스터" />
-      </li>
-    </ul>
-  </section> -->
-
-
-
-
-    
+ 
   <!-- FOOTER -->
   <div class="graphic_footer">
     <div id="btntop">
