--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -184,126 +184,126 @@
   </div>
     
   <!-- CARDNEWS SECTION -->
-  <section id="cardnews_1">
+  <section id="cardnews_1" class="scroll-spy">
     <!-- <h3>공모전 홍보 게시글 기획 &amp; 디자인</h3> -->
     <ul>
-      <li>
+      <li class="back-to-position to-right delay-0">
         <img src="images/cardnews_1_01.png" class="cardnews_1_01" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-left delay-1">
         <img src="images/cardnews_1_02.png" class="cardnews_1_02" alt="카드뉴스1-공모전 공고" />
       </li>
     </ul>
   </section>
   
-  <section id="cardnews_1_detail">
+  <section id="cardnews_1_detail"  class="scroll-spy">
     <ul>
-      <li>
+      <li class="back-to-position to-bottom delay-1">
         <img src="images/cardnews_1_03.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-2">
         <img src="images/cardnews_1_04.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-3">
         <img src="images/cardnews_1_05.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-4">
         <img src="images/cardnews_1_06.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-5">
         <img src="images/cardnews_1_07.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-6">
         <img src="images/cardnews_1_08.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-7">
         <img src="images/cardnews_1_09.png" alt="카드뉴스1-공모전 공고" />
       </li>
-      <li>
+      <li class="back-to-position to-bottom delay-8">
         <img src="images/cardnews_1_10.png" alt="카드뉴스1-공모전 공고" />
       </li>
     </ul>
   </section>
 
-  <section id="cardnews_2">
+  <section id="cardnews_2" class="scroll-spy">
     <div class="contentswrap">
       <!-- <h3>콘텐츠 퀴즈 이벤트 기획 &amp; 디자인</h3> -->
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-0">
           <img src="images/cardnews_2_01.png" alt="카드뉴스2-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-1">
           <img src="images/cardnews_2_02.png" alt="카드뉴스2-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/cardnews_2_03.png" alt="카드뉴스2-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-3">
           <img src="images/cardnews_2_04.png" alt="카드뉴스2-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/cardnews_2_05.png" alt="카드뉴스2-퀴즈 이벤트" />
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="cardnews_3">
+  <section id="cardnews_3" class="scroll-spy">
     <div class="contentswrap">
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-0">
           <img src="images/cardnews_3_01.jpg" alt="카드뉴스3-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/cardnews_3_02.jpg" alt="카드뉴스3-퀴즈 이벤트" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/cardnews_3_03.jpg" alt="카드뉴스3-퀴즈 이벤트" />
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="cardnews_4">
+  <section id="cardnews_4" class="scroll-spy">
     <div class="contentswrap">
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-0">
           <img src="images/cardnews_4_01.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-1">
           <img src="images/cardnews_4_02.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/cardnews_4_03.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-3">
           <img src="images/cardnews_4_04.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/cardnews_4_05.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-5">
           <img src="images/cardnews_4_06.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-6">
           <img src="images/cardnews_4_07.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-7">
           <img src="images/cardnews_4_08.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-8">
           <img src="images/cardnews_4_09.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-9">
           <img src="images/cardnews_4_10.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-10">
           <img src="images/cardnews_4_11.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-11">
           <img src="images/cardnews_4_12.png" alt="카드뉴스4-금융서비스" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-12">
           <img src="images/cardnews_4_13.png" alt="카드뉴스4-금융서비스" />
         </li>
       </ul>
@@ -311,10 +311,10 @@
   </section>
 
   <!-- WEB BANNER SECTION -->
-  <section id="main_webbanner">
+  <section id="main_webbanner" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/webbanner_1_01.png" alt="Web Design" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">WEB DESIGN</h1>
         <h2>&#35;2 홈페이지 웹배너 제작</h2>
         <h3>OVERVIEW</h3>
@@ -323,61 +323,61 @@
           브랜드의 시그니처 메뉴와 제품이 돋보이도록 배너를 디자인했다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>작업일시 &#58; 2021년 11월 &#126; 12월</li>
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </section>
 
-  <section id="webbanner_1">
+  <section id="webbanner_1" class="scroll-spy">
     <div class="contentswrap">
-      <h3>KRISPYKREME WEB BANNER</h3>
+      <h3 class="back-to-position to-bottom delay-0">KRISPYKREME WEB BANNER</h3>
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webbanner_1_01.png" alt="웹배너1-크리스피크림" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/webbanner_1_02.png" alt="웹배너1-크리스피크림" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-6">
           <img src="images/webbanner_1_03.png" alt="웹배너1-크리스피크림" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-8">
           <img src="images/webbanner_1_04.png" alt="웹배너1-크리스피크림" />
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="webbanner_2">
+  <section id="webbanner_2" class="scroll-spy">
     <div class="contentswrap">
-      <h3>URIAGE WEB BANNER</h3>
+      <h3 class="back-to-position to-bottom delay-0">URIAGE WEB BANNER</h3>
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webbanner_2_01.png" alt="웹배너2-유리아쥬" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/webbanner_2_02.png" alt="웹배너2-유리아쥬" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-6">
           <img src="images/webbanner_2_03.png" alt="웹배너2-유리아쥬" />
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="webbanner_3">
+  <section id="webbanner_3" class="scroll-spy">
     <div class="contentswrap">
-      <h3>YUHAN WEB BANNER</h3>
+      <h3 class="back-to-position to-bottom delay-0">YUHAN WEB BANNER</h3>
       <ul>
-        <li>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webbanner_3_01.png" alt="웹배너2-유한양행" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-4">
           <img src="images/webbanner_3_02.png" alt="웹배너2-유한양행" />
         </li>
-        <li>
+        <li class="back-to-position to-bottom delay-6">
           <img src="images/webbanner_3_03.png" alt="웹배너2-유한양행" />
         </li>
       </ul>
@@ -385,10 +385,10 @@
   </section>
 
   <!-- WEBPAGE SECTION -->
-  <section id="main_webpage">
+  <section id="main_webpage" class="scroll-spy">
     <div class="contentswrap">
       <img src="./images/webpage_1_01.png" alt="Web Page" class="floating" />
-      <div class="title">
+      <div class="title back-to-position to-right delay-0">
         <h1 class="logo">WEB DESIGN</h1>
         <h2>&#35;3 홈페이지 디자인</h2>
         <h3>OVERVIEW</h3>
@@ -396,30 +396,30 @@
           크리스피크림, 유리아쥬, 유한양행 홈페이지 리뉴얼 디자인을 진행한 작업물이다. 개인작업으로 리뉴얼 디자인 후 사이트로 제작했다. 또한 한국아이티평가원에서 근무할 때 개발한 서비스의 DashBoard 페이지를 리뉴얼 디자인 했다. Light Mode와 Dark Mode 두가지 버전으로 디자인했다.
         </p>
       </div>
-      <ul class="period">
+      <ul class="period back-to-position to-right delay-2">
         <li>작업일시 &#58; 2021년 11월 &#126; 12월</li>
         <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </section>
 
-  <section id="webdesign">
+  <section id="webdesign" class="scroll-spy">
     <div class="contentswrap">
       <ul>
-        <h3>KRISPYKREME WEB DESIGN</h3>
-        <li>
+        <h3 class="back-to-position to-bottom delay-0">KRISPYKREME WEB DESIGN</h3>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webpage_1_02.png" alt="웹디자인1-크리스피크림" />
         </li>
-        <h3>URIAGE WEB DESIGN</h3>
-        <li>
+        <h3 class="back-to-position to-bottom delay-0">URIAGE WEB DESIGN</h3>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webpage_1_03.png" alt="웹디자인1-유리아쥬" />
         </li>
-        <h3>YUHAN WEB DESIGN</h3>
-        <li>
+        <h3 class="back-to-position to-bottom delay-0">YUHAN WEB DESIGN</h3>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webpage_1_04.png" alt="웹디자인1-유한양행" />
         </li>
-        <h3>SCS DASHBOARD WEB DESIGN</h3>
-        <li>
+        <h3 class="back-to-position to-bottom delay-0">SCS DASHBOARD WEB DESIGN</h3>
+        <li class="back-to-position to-bottom delay-2">
           <img src="images/webpage_1_05.png" alt="웹디자인1-SCS" />
           <img src="images/webpage_1_06.png" alt="웹디자인1-SCS" />
         </li>
