--- a/sub_starbucks.html
+++ b/sub_starbucks.html
@@ -293,7 +293,7 @@
       <a href="#"></a>
     </div>
     <p class="copyright">
-      Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
+      Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM
     </p>
   </div>
 
