--- a/sub_krispykreme.html
+++ b/sub_krispykreme.html
@@ -309,7 +309,7 @@
       <a href="#"></a>
     </div>
     <p class="copyright">
-      Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
+      Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM
     </p>
   </div>
   
