--- a/sub_overwatch.html
+++ b/sub_overwatch.html
@@ -271,7 +271,7 @@
       <a href="#"></a>
     </div>
     <p class="copyright">
-      Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
+      Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM
     </p>
   </div>
   
