--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -165,7 +165,7 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/main_webdesign.png" alt="Web Design" class="floating" />
+      <img src="./images/main_webdesign.png" alt="Web Design" class="floating hide" />
       <div class="title">
         <h1 class="logo">WEB DESIGN</h1>
         <h2>&#35;1 SNS 홍보 카드뉴스 제작</h2>
@@ -314,7 +314,7 @@
   <!-- WEB BANNER SECTION -->
   <section id="main_webbanner" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/webbanner_1_01.png" alt="Web Design" class="floating" />
+      <img src="./images/webbanner_1_01.png" alt="Web Design" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">WEB DESIGN</h1>
         <h2>&#35;2 홈페이지 웹배너 제작</h2>
@@ -388,7 +388,7 @@
   <!-- WEBPAGE SECTION -->
   <section id="main_webpage" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/webpage_1_01.png" alt="Web Page" class="floating" />
+      <img src="./images/webpage_1_01.png" alt="Web Page" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">WEB DESIGN</h1>
         <h2>&#35;3 홈페이지 디자인</h2>
